cabal-version:   3.14
name:            torange-bot
description:     Script posting links to Reddit with a provided login.
synopsis:        A minimal link-posting bot for Reddit.
version:         0.0.0.1
license:         Unlicense
build-type:      Simple
category:        Network
maintainer:      g at 11xx dot org
license-file:    UNLICENSE
homepage:        https://github.com/useless-utils/torange-bot
source-repository head
    type:        git
    location:    https://github.com/useless-utils/torange-bot

executable torange-bot
    main-is:          Bot.hs
    build-depends:    base ^>= 4.21
                    , reddit ^>= 0.3
                    , directory ^>= 1.3.9.0
                    , filepath ^>= 1.5.4.0
                    , text ^>= 2.1.2
                    -- , path ^>= 0.9.6  -- reexported by path-extra already
                    , path-extra
                    , path-io ^>= 1.8.2

    default-language: GHC2024
    ghc-options: -Wall
