cabal-version:   3.14
name:            torange-bot
description:     Script posting links to Reddit with a provided login.
synopsis:        A minimal link-posting bot for Reddit.
version:         0.0.0.1
license:         Unlicense
build-type:      Simple
category:        Network
maintainer:      g at 11xx dot org
license-file:    UNLICENSE
homepage:        https://github.com/useless-utils/torange-bot
source-repository head
    type:        git
    location:    https://github.com/useless-utils/torange-bot

executable torange-bot
    main-is:          Bot.hs
    build-depends:    base ^>= 4.18
                    , http-client ^>= 0.7.19
                    , http-client-tls ^>= 0.3.6.4
                    , http-types ^>= 0.12.4
                    , bytestring ^>= 0.12.2
                    , text ^>= 2.1.2
                    , path-extra ^>= 0.1
                    , path-io ^>= 1.8.2
                    , yocto ^>= 1.0.1
                    , containers >= 0.6.7

    default-language: GHC2021
    ghc-options: -Wall
